2008-03-16  Noel O'Boyle  <baoilleach@gmail.com>
	
	* All .cpp and .h files: Set SVN property svn:eol to native


2008-03-15  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* src/CMakeLists.txt: Add ops and descriptors subdirectories.

	* src/ops.cpp, src/forcefield.cpp, src/ops/loader.cpp,
	src/ops/optransform.cpp, src/descriptors/cmpdfilter.cpp,
	src/descriptors/smartsdescriptors.cpp,
	src/descriptors/groupcontrib.cpp, src/format.cpp, src/alias.cpp,
	src/forcefields/forcefieldmmff94.cpp, src/formats/MCDLformat.cpp, 
	Change to UNIX line-endings for consistency. (Some files also had
	multiple line formats.)

	* include/openbabel/math/matrix3x3.h,
	include/openbabel/forcefield.h: Move to loop form. Compiler
	loop unrolling is effective, and loops can be vectorized for
	greater speed. 

2008-03-15  Tim Vandermeersch <tim.vandermeersch@gmail.com>

	* include/openbabel/builder.h, src/builder.cpp: More robust way to
	determine OBBitVec fragment masks. This is now handled internally and 
	actually checks if a and b (in Connect) don't belong to the same
	fragment. This also fixes the previously not working commit for: 
	c1cc(CC)ccc1

	* src/CMakeLists.txt: Remove groupcontrib.cpp, added some new files.
	Not sure if the ops/ dir is included.

	* data/CMakeLists.txt: Update data files to install.

	* CMakeLists.txt: Change version to 2.2.0b4.

	* include/openbabel/builder.h, src/builder.cpp: Moved some
	functionality from Build to Connect(). OBBuilder now constructs
	molecules with a single pass trough the database.

	* src/forcefield.cpp: Remove debug output.

2008-03-14  Chris Morley

	* src/formats/gausszmatformat.cpp: add replacement function for
	strcasestr, which is not in Visual Studio's library.

	* windows-vc2005/babelconfig.h: #define strcasestr _strcasestr

	* src/formats/mdlformat.cpp, src/formats/xml/cmlformat.cpp:
	Don't output property with attribute "PartialCharges", which isn't
	relevant in these formats. 
	